Using streams wherever possible